Fix pagination alignment being far too low. Closes #1688

--- a/symphony/assets/css/admin.css
+++ b/symphony/assets/css/admin.css
@@ -501,7 +501,7 @@ div.password {
 /* Pagination */
 
 ul.page {
-	margin: 61px 0 0;
+	margin: -61px 0 0;
 	padding: 23px 50px 0 19px;
 	height: 36px;
 	color: #9e9e9e;
